<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

	<PreferenceCategory android:title="@string/pref_header_pattern">

		<ListPreference
			android:key="pref_pattern_grid_size"
			android:title="@string/pref_pattern_grid_size_title"
			android:summary="@string/pref_pattern_grid_size_sum"
			android:dialogTitle="@string/pref_pattern_grid_size_title"
			android:entries="@array/pref_grid_size_entries"
			android:entryValues="@array/pref_grid_size_entries"
			android:defaultValue="8" />

		<ListPreference
			android:key="pref_pattern_max_dots"
			android:title="@string/pref_pattern_max_dots_title"
			android:summary="@string/pref_pattern_max_dots_sum"
			android:entries="@array/pref_max_dots_entries"
			android:entryValues="@array/pref_max_dots_entries"
			android:defaultValue="20"
			/>

		<ListPreference
			android:key="pref_pattern_max_shapes"
			android:title="@string/pref_pattern_max_shapes_title"
			android:summary="@string/pref_pattern_max_shapes_sum"
			android:dialogTitle="@string/pref_pattern_max_shapes_sum"
			android:entries="@array/pref_max_shapes_entries"
			android:entryValues="@array/pref_max_shapes_entries_values"
			android:defaultValue="2"
			/>

		<ListPreference
			android:key="pref_pattern_max_colors"
			android:title="@string/pref_pattern_max_colors_title"
			android:summary="@string/pref_pattern_max_colors_sum"
			android:dialogTitle="@string/pref_pattern_max_colors_sum"
			android:entries="@array/pref_max_colors_entries"
			android:entryValues="@array/pref_max_colors_entries_values"
			android:defaultValue="2"
			/>

		<SwitchPreference
			android:key="pref_pattern_allow_open"
			android:title="@string/pref_pattern_allow_open_title"
			android:summary="@string/pref_pattern_allow_open_summary"
			android:defaultValue="false" />

		<SwitchPreference
			android:key="pref_pattern_allow_diagonals"
			android:title="@string/pref_pattern_allow_diagonals_title"
			android:summary="@string/pref_pattern_allow_diagonals_sum"
			android:defaultValue="false" />

	</PreferenceCategory>

</PreferenceScreen>
