<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:background="@color/app_background_color"
	>

	<TextView
		android:layout_width="fill_parent"
		android:layout_height="0dp"
		android:layout_weight="2"
		android:text="@string/launcher_title"
		android:textSize="26sp"
		android:layout_gravity="top"
		android:gravity="center"
		android:singleLine="true" />

	<LinearLayout
		android:orientation="vertical"
		android:layout_width="fill_parent"
		android:layout_height="0dp"
		android:layout_weight="1"
		android:padding="40dp"
		>

		<Button
			android:id="@+id/settingsButton"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/settings_button"
			android:onClick="showSettings"
			/>

		<Button
			android:id="@+id/startButton"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/start_button"
			android:onClick="showGenerator"
			/>

	</LinearLayout>

</LinearLayout>
